# ohjelmistotekniikka

./: .gitignore  README.md
dokumentaatio/: vaatimusmaarittely.md
harjoitustyo/: .coveragerc  .pylintrc  pyproject.toml  tasks.py
harjoitustyo/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
harjoitustyo/src/: database_connection.py  index.py  initialize_database.py
harjoitustyo/src/entities/: course.py  period.py  studyplan.py  user.py  year.py
harjoitustyo/src/repositories/: academicyear_repository.py  course_repository.py  period_repository.py  studyplan_repository.py  user_repository.py
harjoitustyo/src/services/: academicyear_service.py  authentication_service.py  course_service.py  period_service.py  statistics_service.py  studyplan_service.py  user_service.py
harjoitustyo/src/tests/: academicyear_repository_test.py  academicyear_service_test.py  course_repository_test.py  course_service_test.py  period_repository_test.py  period_service_test.py  studyplan_repository_test.py  studyplan_service_test.py  user_repository_test.py  user_service_test.py
harjoitustyo/src/tests/repository_tests/: academicyear_repository_test.py  course_repository_test.py  studyplan_repository_test.py  user_repository_test.py
harjoitustyo/src/ui/: add_course_to_plan_view.py  add_course_view.py  add_studyplan_view.py  coursedetails_view.py  list_courses_view.py  login_view.py  periods_view.py  register_view.py  start_view.py  statistics_view.py  studyplans_view.py  ui.py  year_form_view.py
(+14 files in other folders)
