[project]
name = "harjoitustyo"
version = "0.1.0"
description = ""
authors = [
    {name = "jasminlei",email = "jasminleinonen@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "invoke (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.8.0"

[tool.pytest.ini_options]
testpaths = "src"
pythonpath = [
  "./src/"
]